# runawayguys

./: .gitignore  ARCHITECTURE_PROPOSAL.md  AVAILABLE_LLM_OPTIONS.md  CONFIG_SETUP.md  EMAIL_SETUP.md  FLOW_TEST_CHECKLIST.md  LICENSE  LLM_FEATURE_SUMMARY.md  LLM_INTEGRATION_GUIDE.md  Makefile  README.md  REDFLAG_INSIGHTS_CONFIG.md  REFACTORING_SUMMARY.md  TESTING.md  VALUE_OBJECTS_REFACTORING.md  app.py  app_test.py  backlog.txt  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
config/: README.md  dynamodb_tables.yaml
docs/: RedFlag Project.pptx  mkdocs.yml  ~$RedFlag Project.pptx
docs/docs/: index.md
notebooks/: PY.ipynb  redflag_survey_run_v2.py
notebooks/cold_start/: 01_initialize_dynamodb_tables.ipynb  01_initialize_dynamodb_tables.py  02_manage_session_records.ipynb  02_manage_session_records.py  03_initialize_tables.ipynb  04_delete_session.ipynb  05_update_session.ipynb  06_list_sessions.ipynb  07_reassign_session_ids.ipynb  README.md  (+4 more)
src/: ask_boyfriend_name.py  ask_filter_questions.py  ask_language.py  ask_user_details.py  base_step.py  connection_manager.py  database_handler.py  email_connection_manager.py  email_sender.py  feedback_step.py  filter_questions_step.py  goodbye.py  goodbye_step.py  gtk_questions_step.py  main.py  messages.py  progress_manager.py  redflag_questions_step.py  report_step.py  results_step.py  session_manager.py  survey_controller.py  toxicity_opinion_step.py  utils.py  welcome.py
tests/: _mini_app.py  conftest.py  test_ask_language.py  test_ask_user_details.py  test_dynamodb_connection.py
(+52 files in other folders)
